force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/tdc_tsw__Scheduled_Sms__c.object-meta.xml
<CustomObject>
    <label>Scheduled SMS</label>
    <nameField>
        <label>Scheduled Sms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>