force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Source_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Source_Id__c</fullName>
    <label>Source Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>