force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Text_Preference__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Text_Preference__c</fullName>
    <description>Picklist to choose Text in case of Update</description>
    <label>Text Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Message Text</fullName>
                <default>true</default>
                <label>Message Text</label>
            </value>
            <value>
                <fullName>Template Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>