force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Transaction_Id__c</fullName>
    <description>Has uniqueId for a single transaction.</description>
    <inlineHelpText>Contains UniqueId for a particular transaction.</inlineHelpText>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>