force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__UpdateFor__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__UpdateFor__c</fullName>
    <inlineHelpText>Select &quot;All&quot; to update the changes for all records with Same Transaction Id</inlineHelpText>
    <label>UpdateFor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>This Record Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>