force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Voice_Drop__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Voice_Drop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related to voice template</description>
    <inlineHelpText>Voice template lookup</inlineHelpText>
    <label>Voice Drop</label>
    <referenceTo>tdc_tsw__VoiceTemplate__c</referenceTo>
    <relationshipLabel>Scheduled SMS</relationshipLabel>
    <relationshipName>Scheduled_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>